# idevice_pair

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
DDI/: BuildManifest.plist  Image.dmg.trustcache
src/: discover.rs  main.rs  mount.rs
