[package]
name = "idevice_pair"
version = "0.1.14"
edition = "2024"

[dependencies]
idevice = { version = "0.1.61", features = [
  "pair",
  "usbmuxd",
  "installation_proxy",
  "afc",
  "house_arrest",
  "mobile_image_mounter",
  "core_device_proxy",
  "remote_pairing",
  "rsd",
  "tunnel_tcp_stack",
  "tss",
] }
tokio = { version = "1.45", features = ["full"] }
plist = { version = "1.7" }
log = { version = "0.4" }
uuid = { version = "1.16", features = ["v4"] }
mdns = { version = "3" }
futures-util = { version = "0.3" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
anyhow = "1.0"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
generate = []
default = ["generate"]
